--- a/content/posts/2022-06-24-recap.md
+++ b/content/posts/2022-06-24-recap.md
@@ -21,13 +21,15 @@ Trans March. We continued along Market to The Castro, a destination several
 people wanted to reach in honor of Pride, and then rode down to Dolores Park
 for the first stop.
 
-After a half hour break we continued onward, south, up a few hills to Slow
-Sanchez Street, and stopped briefly at 30th Street to figure out a route back
+After a half hour break we continued onward, south, up a few hills to
+[Slow Sanchez Street](https://twitter.com/slowsanchezsf),
+and stopped briefly at 30th Street to figure out a route back
 north. We continued up another decent hill, unusal for Critical Mass, and
 stopped in front of the Bernal Heights Library to regroup. After all our
-accumulated altitude, we bombed down 200 ft into the industrial no-man's land
+accumulated altitude, we bombed 200 ft down into the industrial no-man's land
 between 101 and 280 before escaping to the bay. We stopped at Warm Water Cove,
-a small hidden-gem of a park, then continued north along the bay. Unknown
+a small hidden-gem of a park also known as "Toxic Beach,"
+then continued north along the bay. Unknown
 people were setting off quite impressive fireworks at the boatworks near the
 Chase Center, and we stopped to watch. Finally, we turned west at 16th Street
 and reached the Mission where I peeled off to head home.
