Clarify June recap date

--- a/content/posts/2022-06-24-recap.md
+++ b/content/posts/2022-06-24-recap.md
@@ -5,8 +5,9 @@ author: "Mingwei"
 draft: false
 ---
 
-The Supreme Court today overturned Roe v. Wade, upending 50 years of settled
-law and sparking protests all across the country and world. San Francisco had
+The Supreme Court overturned Roe v. Wade this Friday June 24, upending 50
+years of settled law in a blatant attack on women's and LGBTQ+ rights,
+sparking protests all across the country and world. San Francisco had
 at least three separate protests which converged together, as well as the
 [Trans March](https://www.transmarch.org/trans-march-2022/), leading to a
 chaotic evening.
